# robot-voice-dog

./: .gitignore  CMakeLists.txt  prueba.cpp
.github/workflows/: ci.yml
deploy/: deploy.sh  pi-setup.sh
modules/audio/: audio_capture.cpp  audio_capture.hpp
modules/command/: command_router.cpp  command_router.hpp
modules/stt/: whisper_wrapper.cpp  whisper_wrapper.hpp
scripts/: build_pi.sh  first_clone.sh  setup_ssh.sh
src/: main.cpp
systemd/: robot-voice.service
